frontend/style.css
*, *::before, *::after {
    box-sizing: border-box;
}

@font-face {
    font-family: "Source Sans 3";
    src: url("fonts/SourceSans3-VariableFont_wght.ttf");
}

:root {
    --border-width: 0.3rem;
    --outline-color: red;
    --border: var(--border-width) solid var(--outline-color);
    --font-lg: 2rem;
    --font-md: 1.5rem;
    --font-sm: 1rem;
    --text-color: white;
    --background: black;
    --hover-color: #808080;
}

button {
    background-color: inherit;
    color: inherit;
    font-family: inherit;
    font-size: inherit;

    border: 0;
}

button:hover {
    background-color: var(--hover-color);
    cursor: pointer;
}

body {
    background: var(--background);
    color: var(--text-color);

    margin: 0;
    height: 100vh;

    border: var(--border);

    font-family: "Source Sans 3", sans-serif;
    font-size: var(--font-lg);

    display: flex;
}

#content {
    width: 100%;

    display: flex;
    flex-direction: column;
}

#content header {
    text-align: center;
}

#content header nav {
    display: grid;
    grid-template-columns: 1fr var(--border-width) 2fr var(--border-width) 1fr;

    border: var(--border);
    border-width: var(--border-width) 0;
}

hr {
    border: 0;
    margin: 0;
}

hr.vr {
    border-right: var(--border);
    height: 100%;
}

.content-main {
    display: none;
    flex-direction: column;

    height: 100%;
}

.content-main.active {
    display: flex;
}

.content-main main {
    height: 100%;

    font-size: var(--font-md);
}

.download-card {
    display: flex;

    border-bottom: var(--border);
}

.download-card .info {
    padding: 0.25rem;
    width: 75%;
}

.download-card .status {
    font-size: var(--font-sm);
}

.download-card .operations {
    width: 25%;

    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.download-card .operations button {
    height: 100%;

    border-left: var(--border);
}

.download-card .operations span {
    padding-right: 0.25rem;
}

.content-main footer {
    border-top: var(--border);
}

.footer-buttons {
    display: grid;
    grid-template-columns: 1fr var(--border-width) 1fr;
}

.content-main[data-page="Settings"] main {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(5, 1fr);

    height: initial;
}

.setting-card {
    display: flex;
    flex-direction: column;

    text-align: center;
    border-bottom: var(--border);
}

.setting-card:nth-child(odd) {
    border-right: var(--border);
}

.setting-card > *, .setting-card.empty {
    width: 100%;
}

.setting-card .name {
    border-bottom: var(--border);
}

.setting-card input[type="text"], .setting-card input[type="button"] {
    background: inherit;
    color: inherit;
    font-family: inherit;
    font-size: inherit;
    border: 0;

    text-align: center;
}

input[type="button"], input[type="checkbox"] + label {
    cursor: pointer;
}

.setting-card input[type="checkbox"] {
    display: none;
}

input[type="checkbox"] + label {
    padding: 1px;
}

input[type="text"]:hover, input[type="checkbox"] + label:hover, input[type="button"]:hover {
    background-color: var(--hover-color);
}

#sidebar {
    display: flex;
}

#sidebar-main, #sidebar-button {
    border-left: var(--border);
}

#sidebar-main {
    display: none;
    flex-direction: column;
    width: 100%;
}

.add-urls-container header {
    text-align: center;
}

.add-urls-container main, .card-info-container main {
    height: 100%;
    border: var(--border);
    border-width: var(--border-width) 0;
    font-size: 1rem;
}

.card-info-container main {
    overflow-y: scroll;
}

.add-urls-container textarea {
    width: 100%;
    height: 100%;
    background-color: inherit;
    color: inherit;
    font-size: inherit;
    font-family: inherit;
    padding: 0.25rem;

    resize: none;
}

.add-urls-container footer {
    text-align: center;
}

.add-urls-container button, .card-info-container button {
    width: 100%;
}

.card-info-container {
    font-size: var(--font-md);
}

.card-info-container header, .card-info-container .log {
    padding: 0.25rem;
}

.card-info-container .task-id {
    font-size: var(--font-sm);
}

.card-info-container .log {
    white-space: pre-wrap;
}

.card-info-container footer {
    font-size: var(--font-lg);

    display: grid;
    grid-template-columns: 1fr var(--border-width) 1fr;
}

#sidebar-button {
    height: 100%;
}

